add_subdirectory(glfw)
add_subdirectory(learning)
add_subdirectory(test_particles)

# the x3d scene graph, need to rework this to use magnum 
#add_subdirectory(scenegraph)

add_subdirectory(voronoi)
add_subdirectory(gmsh1)
#add_subdirectory(blob1)
#add_subdirectory(particles2)
add_subdirectory(test_magnum)
add_subdirectory(viewer)
add_subdirectory(growth1)
