libcx3ddir = $(includedir)/CyberX3D-1.0/cybergarage/x3d

libcx3d_HEADERS = \
	AnchorNode.h \
	AppearanceChildNode.h \
	AppearanceNode.h \
	Arc2DNode.h \
	ArcClose2DNode.h \
	AudioClipNode.h \
	BackgroundNode.h \
	BillboardNode.h \
	BindableNode.h \
	BooleanFilterNode.h \
	BooleanSequencerNode.h \
	BooleanTimeTriggerNode.h \
	BooleanToggleNode.h \
	BooleanTriggerNode.h \
	Bounded2DNode.h \
	Bounded2DObject.h \
	BoundedGrouping2DNode.h \
	BoundedGroupingNode.h \
	BoundedNode.h \
	BoundedObject.h \
	BoundingBox.h \
	BoundingBox2D.h \
	BoxNode.h \
	Circle2DNode.h \
	CollisionNode.h \
	ColorInterpolatorNode.h \
	ColorNode.h \
	ColorRGBANode.h \
	ComposedGeometryNode.h \
	ConeNode.h \
	CoordinateInterpolator2DNode.h \
	CoordinateInterpolatorNode.h \
	CoordinateNode.h \
	CyberX3D.h \
	CyberX3DConfig.h \
	CylinderNode.h \
	CylinderSensorNode.h \
	DEF.h \
	DEFNode.h \
	DirectionalLightNode.h \
	Disk2DNode.h \
	DragSensorNode.h \
	ElevationGridNode.h \
	EnvironmentalSensorNode.h \
	Event.h \
	ExtrusionNode.h \
	Field.h \
	FileGIF89a.h \
	FileImage.h \
	FileJPEG.h \
	FilePNG.h \
	FileTarga.h \
	FileUtil.h \
	FillPropertiesNode.h \
	FogNode.h \
	FontStyleNode.h \
	GeometricPropertyNode.h \
	Geometry2DNode.h \
	Geometry3DNode.h \
	GeometryNode.h \
	Graphic3D.h \
	GroupNode.h \
	Grouping2DNode.h \
	GroupingNode.h \
	ImageTextureNode.h \
	IndexedFaceSetNode.h \
	IndexedLineSetNode.h \
	InfoNode.h \
	InlineNode.h \
	IntegerSequencerNode.h \
	IntegerTriggerNode.h \
	InterpolatorNode.h \
	JNode.h \
	JScript.h \
	JavaVM.h \
	KeyDeviceSensorNode.h \
	KeySensorNode.h \
	LODNode.h \
	LightNode.h \
	LinePropertiesNode.h \
	LinkedList.h \
	LinkedListNode.h \
	LoadSensorNode.h \
	MFBool.h \
	MFChar.h \
	MFColor.h \
	MFColorRGBA.h \
	MFDouble.h \
	MFFloat.h \
	MFInt32.h \
	MFNode.h \
	MFRotation.h \
	MFString.h \
	MFTime.h \
	MFVec2d.h \
	MFVec2f.h \
	MFVec3d.h \
	MFVec3f.h \
	MField.h \
	MaterialNode.h \
	MathUtil.h \
	MovieTextureNode.h \
	MultiTextureCoordinateNode.h \
	MultiTextureNode.h \
	MultiTextureTransformNode.h \
	NavigationInfoNode.h \
	NetworkSensorNode.h \
	Node.h \
	NodeList.h \
	NodeSequencerNode.h \
	NodeString.h \
	NodeType.h \
	NormalInterpolatorNode.h \
	NormalNode.h \
	OldCpp.h \
	OrientationInterpolatorNode.h \
	PROTO.h \
	Parser.h \
	ParserFunc.h \
	ParserNode.h \
	ParserResult.h \
	PixelTextureNode.h \
	PlaneSensorNode.h \
	PointLightNode.h \
	PointSetNode.h \
	PointingDeviceSensorNode.h \
	Polyline2DNode.h \
	Polypoint2DNode.h \
	PositionInterpolator2DNode.h \
	PositionInterpolatorNode.h \
	ProximitySensorNode.h \
	Rectangle2DNode.h \
	RootNode.h \
	Route.h \
	RouteList.h \
	RouteNode.h \
	SFBool.h \
	SFChar.h \
	SFColor.h \
	SFColorRGBA.h \
	SFDouble.h \
	SFFloat.h \
	SFImage.h \
	SFInt32.h \
	SFMatrix.h \
	SFNode.h \
	SFRotation.h \
	SFString.h \
	SFTime.h \
	SFVec2d.h \
	SFVec2f.h \
	SFVec3d.h \
	SFVec3f.h \
	ScalarInterpolatorNode.h \
	Scene.h \
	SceneGraph.h \
	SceneNode.h \
	ScriptNode.h \
	SensorNode.h \
	SequencerNode.h \
	Shape2DNode.h \
	ShapeNode.h \
	SoundNode.h \
	SoundSourceNode.h \
	SphereNode.h \
	SphereSensorNode.h \
	SpotLightNode.h \
	StaticGroupNode.h \
	StringSensorNode.h \
	StringUtil.h \
	SwitchNode.h \
	TextNode.h \
	Texture2DNode.h \
	TextureCoordinateGeneratorNode.h \
	TextureCoordinateNode.h \
	TextureNode.h \
	TextureTransformNode.h \
	TimeSensorNode.h \
	TimeTriggerNode.h \
	TouchSensorNode.h \
	Transform2DNode.h \
	TransformNode.h \
	TriangleFanSetNode.h \
	TriangleSet2DNode.h \
	TriangleSetNode.h \
	TriangleStripSetNode.h \
	TriggerNode.h \
	UrlFile.h \
	VRML97.tab.h \
	VRML97Fields.h \
	VRML97Nodes.h \
	VRML97Parser.h \
	VRML97ParserFunc.h \
	Vector.h \
	ViewpointNode.h \
	VisibilitySensorNode.h \
	WorldInfoNode.h \
	X3DFields.h \
	X3DNodes.h \
	X3DParser.h \
	X3DParserHandlers.h \
	X3DParserTokenizer.h \
	XMLElement.h \
	XMLNode.h 
#\
#	VRML97.l \
#	VRML97.y
