lib_LTLIBRARIES = libcx3d-1.0.la

EXTRA_DIST=VRML97.y VRML97.l build

libcx3d_1_0_la_LDFLAGS = -version-info @CX3D_VERSION_INFO@

INCLUDES = -I$(top_srcdir)/include

#CX3D_INCLUDE_DIR = 
#CX3D_SRC_DIR = 
#libcx3ddir = $(includedir)/CyberX3D-1.0/cybergarage/x3d
#libcx3d_a_HEADERS =

libcx3d_1_0_la_SOURCES = \
	AnchorNode.cpp \
	AppearanceNode.cpp \
	Arc2DNode.cpp \
	ArcClose2DNode.cpp \
	AudioClipNode.cpp \
	BackgroundNode.cpp \
	BillboardNode.cpp \
	BindableNode.cpp \
	BooleanFilterNode.cpp \
	BooleanSequencerNode.cpp \
	BooleanTimeTriggerNode.cpp \
	BooleanToggleNode.cpp \
	BooleanTriggerNode.cpp \
	Bounded2DNode.cpp \
	BoundedGrouping2DNode.cpp \
	BoundedGroupingNode.cpp \
	BoundedNode.cpp \
	BoundingBox.cpp \
	BoundingBox2D.cpp \
	BoxNode.cpp \
	Circle2DNode.cpp \
	CollisionNode.cpp \
	ColorInterpolatorNode.cpp \
	ColorNode.cpp \
	ColorRGBANode.cpp \
	ComposedGeometryNode.cpp \
	ConeNode.cpp \
	CoordinateInterpolator2DNode.cpp \
	CoordinateInterpolatorNode.cpp \
	CoordinateNode.cpp \
	CylinderNode.cpp \
	CylinderSensorNode.cpp \
	DEF.cpp \
	DEFNode.cpp \
	DirectionalLightNode.cpp \
	Disk2DNode.cpp \
	DragSensorNode.cpp \
	ElevationGridNode.cpp \
	EnvironmentalSensorNode.cpp \
	Event.cpp \
	ExtrusionNode.cpp \
	Field.cpp \
	FileGIF89a.cpp \
	FileImage.cpp \
	FileJPEG.cpp \
	FilePNG.cpp \
	FileTarga.cpp \
	FileUtil.cpp \
	FillPropertiesNode.cpp \
	FogNode.cpp \
	FontStyleNode.cpp \
	Geometry2DNode.cpp \
	Geometry3DNode.cpp \
	GeometryNode.cpp \
	GroupNode.cpp \
	Grouping2DNode.cpp \
	GroupingNode.cpp \
	ImageTextureNode.cpp \
	IndexedFaceSetNode.cpp \
	IndexedLineSetNode.cpp \
	InlineNode.cpp \
	IntegerSequencerNode.cpp \
	IntegerTriggerNode.cpp \
	InterpolatorNode.cpp \
	JNode.cpp \
	JScript.cpp \
	JavaVM.cpp \
	KeyDeviceSensorNode.cpp \
	KeySensorNode.cpp \
	LODNode.cpp \
	LightNode.cpp \
	LinePropertiesNode.cpp \
	LoadSensorNode.cpp \
	MFBool.cpp \
	MFChar.cpp \
	MFColor.cpp \
	MFColorRGBA.cpp \
	MFDouble.cpp \
	MFFloat.cpp \
	MFInt32.cpp \
	MFNode.cpp \
	MFRotation.cpp \
	MFString.cpp \
	MFTime.cpp \
	MFVec2d.cpp \
	MFVec2f.cpp \
	MFVec3d.cpp \
	MFVec3f.cpp \
	MField.cpp \
	MaterialNode.cpp \
	MathUtil.cpp \
	MovieTextureNode.cpp \
	MultiTextureCoordinateNode.cpp \
	MultiTextureNode.cpp \
	MultiTextureTransformNode.cpp \
	NavigationInfoNode.cpp \
	NetworkSensorNode.cpp \
	Node.cpp \
	NodeList.cpp \
	NodeSequencerNode.cpp \
	NodeType.cpp \
	NormalInterpolatorNode.cpp \
	NormalNode.cpp \
	OrientationInterpolatorNode.cpp \
	PROTO.cpp \
	Parser.cpp \
	ParserFunc.cpp \
	ParserNode.cpp \
	PixelTextureNode.cpp \
	PlaneSensorNode.cpp \
	PointLightNode.cpp \
	PointSetNode.cpp \
	Polyline2DNode.cpp \
	Polypoint2DNode.cpp \
	PositionInterpolator2DNode.cpp \
	PositionInterpolatorNode.cpp \
	ProximitySensorNode.cpp \
	Rectangle2DNode.cpp \
	RootNode.cpp \
	Route.cpp \
	RouteList.cpp \
	RouteNode.cpp \
	SFBool.cpp \
	SFChar.cpp \
	SFColor.cpp \
	SFColorRGBA.cpp \
	SFDouble.cpp \
	SFFloat.cpp \
	SFImage.cpp \
	SFInt32.cpp \
	SFMatrix.cpp \
	SFNode.cpp \
	SFRotation.cpp \
	SFString.cpp \
	SFTime.cpp \
	SFVec2d.cpp \
	SFVec2f.cpp \
	SFVec3d.cpp \
	SFVec3f.cpp \
	ScalarInterpolatorNode.cpp \
	Scene.cpp \
	SceneGraph.cpp \
	SceneNode.cpp \
	ScriptNode.cpp \
	SensorNode.cpp \
	SequencerNode.cpp \
	Shape2DNode.cpp \
	ShapeNode.cpp \
	SoundNode.cpp \
	SoundSourceNode.cpp \
	SphereNode.cpp \
	SphereSensorNode.cpp \
	SpotLightNode.cpp \
	StaticGroupNode.cpp \
	StringSensorNode.cpp \
	StringUtil.cpp \
	SwitchNode.cpp \
	TextNode.cpp \
	Texture2DNode.cpp \
	TextureCoordinateGeneratorNode.cpp \
	TextureCoordinateNode.cpp \
	TextureNode.cpp \
	TextureTransformNode.cpp \
	TimeSensorNode.cpp \
	TimeTriggerNode.cpp \
	TouchSensorNode.cpp \
	Transform2DNode.cpp \
	TransformNode.cpp \
	TriangleFanSetNode.cpp \
	TriangleSet2DNode.cpp \
	TriangleSetNode.cpp \
	TriangleStripSetNode.cpp \
	TriggerNode.cpp \
	UrlFile.cpp \
	VRML97.tab.cpp \
	VRML97.yy.cpp \
	VRML97Parser.cpp \
	VRML97ParserFunc.cpp \
	ViewpointNode.cpp \
	VisibilitySensorNode.cpp \
	WorldInfoNode.cpp \
	X3DParser.cpp \
	X3DParserHandlers.cpp \
	X3DParserTokenizer.cpp \
	XMLElement.cpp \
	XMLNode.cpp
